--- a/servicelist.html
+++ b/servicelist.html
@@ -3,92 +3,278 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr Robot Computer Service - Service & Price List</title>
+    <title>Mr Robot Computer Services - 3D Experience</title>
     <style>
+        /* Reset and base styles */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background: linear-gradient(135deg, #333, #444, #555); /* Refined gradient */
+            color: #f4f4f4;
+            overflow-x: hidden;
+            perspective: 1200px; /* Enhanced 3D effect */
+            animation: gradientShift 12s ease infinite;
+            position: relative;
         }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+
+        /* Gradient background animation */
+        @keyframes gradientShift {
+            0% {
+                background: linear-gradient(135deg, #333, #444, #555);
+            }
+            50% {
+                background: linear-gradient(45deg, #ff6347, #00bcd4, #ff9800);
+            }
+            100% {
+                background: linear-gradient(135deg, #333, #444, #555);
+            }
         }
-        h1 {
+
+        /* Title and header styling */
+        h1, h2 {
             text-align: center;
-            color: #007bff;
+            color: #e3f6f5;
+            margin-bottom: 20px;
+            text-shadow: 2px 4px 8px rgba(0, 0, 0, 0.4);
         }
+
+        #banner {
+            display: block;
+            margin: 20px auto;
+            width: 80%;
+            max-width: 700px;
+            border-radius: 15px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+            transition: transform 0.5s;
+        }
+
+        #banner:hover {
+            transform: scale(1.05) rotateY(10deg) rotateX(-5deg); /* 3D hover effect */
+        }
+
+        /* Main content section */
+        .content-section {
+            width: 85%;
+            margin: 40px auto;
+            padding: 25px;
+            background: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            border-radius: 15px;
+            transform-style: preserve-3d;
+            transition: transform 0.5s;
+        }
+
+        .content-section:hover {
+            transform: translateY(-10px) scale(1.03) rotateX(3deg) rotateY(-3deg); /* 3D hover effect */
+        }
+
+        /* Table Styling */
         table {
             width: 100%;
             border-collapse: collapse;
-            margin: 20px 0;
+            background: rgba(255, 255, 255, 0.2);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+            overflow: hidden;
+            margin-bottom: 30px;
         }
+
         th, td {
             padding: 12px;
             text-align: left;
-            border: 1px solid #ddd;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: #f4f4f4;
         }
+
         th {
-            background-color: #007bff;
-            color: white;
+            background: rgba(0, 153, 204, 0.9);
+        }
+
+        tr:hover {
+            background: rgba(0, 153, 204, 0.3);
+        }
+
+        /* Troubleshooting Section */
+        .troubleshooting {
+            background-color: #2e3b3d;
+            padding: 20px;
+            margin-top: 40px;
+            border-radius: 10px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+        }
+
+        .troubleshooting h3 {
+            color: #ff6347;
+            margin-bottom: 10px;
+        }
+
+        .troubleshooting p {
+            color: #f4f4f4;
+            line-height: 1.6;
+        }
+
+        /* Interactive Particles Effect */
+        .particles-js {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: transparent;
+            z-index: -1;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Mr Robot Computer Service - Service & Price List</h1>
+
+    <!-- Banner Image -->
+    <img src="/home/clay/Desktop/photo_2024-11-08_13-13-27.jpg" id="banner" alt="Mr Robot Services Banner">
+
+    <!-- Service Table -->
+    <div class="content-section">
+        <h2>Explore Our Services</h2>
         <table>
             <tr>
-                <th>Service Name</th>
-                <th>Price Range (MMK)</th>
+                <th>SERVICE NAME</th>
+                <th>PRICE RANGE (MMK)</th>
             </tr>
             <tr>
-                <td>OS Installation/Upgrade</td>
-                <td>20,000 - 35,000</td>
+                <td>OS INSTALLATION/UPGRADE (INCLUDING ACTIVATION)</td>
+                <td>10,000</td>
             </tr>
             <tr>
-                <td>Data Transfer (Including Backup & Recovery)</td>
-                <td>10,000 - 25,000</td>
+                <td>DATA OPERATION (INCLUDING BACKUP & RECOVERY)</td>
+                <td>7,000</td>
             </tr>
             <tr>
-                <td>RAM & Hard Disk Upgrades</td>
-                <td>15,000 - 30,000</td>
+                <td>RAM/HARD DISK & BATTERY UPGRADES/REPLACEMENT</td>
+                <td>5,000</td>
             </tr>
             <tr>
-                <td>Battery Replacement for Laptops</td>
-                <td>15,000 - 25,000</td>
+                <td>SOFTWARE/DRIVER/GAMES INSTALLATION</td>
+                <td>7,000</td>
             </tr>
             <tr>
-                <td>Software Installation (Per Program)</td>
-                <td>5,000 - 15,000</td>
+                <td>ERRORS CONSULTING SERVICE (IDENTIFYING & RESOLVING)</td>
+                <td>5,000</td>
             </tr>
             <tr>
-                <td>Virus Removal & System Optimization</td>
-                <td>15,000 - 30,000</td>
+                <td>VIRUS REMOVAL & SYSTEM OPTIMIZATION</td>
+                <td>17,000</td>
             </tr>
             <tr>
-                <td>Troubleshooting (General Diagnostics)</td>
-                <td>15,000 - 30,000</td>
+                <td>TROUBLESHOOTING (GENERAL DIAGNOSTICS)</td>
+                <td>15,000</td>
             </tr>
             <tr>
-                <td>Password Removal & System Unlocking</td>
-                <td>15,000 - 25,000</td>
+                <td>LOG ON PASSWORD REMOVAL</td>
+                <td>17,000</td>
             </tr>
             <tr>
-                <td>File & Printer Sharing Setup</td>
-                <td>10,000 - 20,000</td>
+                <td>FILE & PRINTER SHARING COMPLETE SETUP</td>
+                <td>15,000</td>
             </tr>
             <tr>
-                <td>Home Service Fee (Additional)</td>
-                <td>5,000 - 10,000</td>
+                <td>BUDGET BUILD SYSTEM & HOME SERVICE FEE (ADDITIONAL)</td>
+                <td>IT DEPENDS</td>
             </tr>
         </table>
     </div>
+
+    <!-- Troubleshooting Guide -->
+    <div class="content-section troubleshooting">
+        <h3>Common Windows Errors and Solutions</h3>
+        <p><strong>Error 1:</strong> <code>Windows could not start</code></p>
+        <p>Solution: Open Command Prompt as Administrator and run the following command to fix boot issues: 
+            <code>bootrec /fixmbr</code>
+        </p>
+        <p><strong>Error 2:</strong> <code>Blue Screen of Death (BSOD)</code></p>
+        <p>Solution: Use Command Prompt to check system files:
+            <code>sfc /scannow</code>
+        </p>
+        <p><strong>Error 3:</strong> <code>Windows Update Fails</code></p>
+        <p>Solution: Reset Windows Update Components:
+            <code>net stop wuauserv</code><br>
+            <code>net start wuauserv</code>
+        </p>
+        <p><strong>Linux/Mac Terminal Fixes</strong></p>
+        <p>For Linux: <code>sudo apt-get update && sudo apt-get upgrade</code> to fix package errors.<br>
+        For Mac: Reset SMC using the terminal: <code>sudo pmset -a hibernatemode 0</code></p>
+    </div>
+
+    <!-- Particles JS for Background Animation -->
+    <div class="particles-js"></div>
+
+    <!-- Particle JS Script -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script>
+        particlesJS("particles-js", {
+            "particles": {
+                "number": {
+                    "value": 100,
+                    "density": {
+                        "enable": true,
+                        "value_area": 800
+                    }
+                },
+                "color": {
+                    "value": "#00bcd4"
+                },
+                "shape": {
+                    "type": "circle",
+                    "stroke": {
+                        "width": 0,
+                        "color": "#000000"
+                    },
+                    "polygon": {
+                        "nb_sides": 5
+                    }
+                },
+                "opacity": {
+                    "value": 0.5,
+                    "random": false,
+                    "anim": {
+                        "enable": true,
+                        "speed": 1,
+                        "opacity_min": 0.1,
+                        "sync": false
+                    }
+                },
+                "size": {
+                    "value": 5,
+                    "random": true,
+                    "anim": {
+                        "enable": true,
+                        "speed": 40,
+                        "size_min": 0.1,
+                        "sync": false
+                    }
+                },
+                "line_linked": {
+                    "enable": true,
+                    "distance": 150,
+                    "color": "#ffffff",
+                    "opacity": 0.4,
+                    "width": 1
+                }
+            },
+            "interactivity": {
+                "detect_on": "canvas",
+                "events": {
+                    "onhover": {
+                        "enable": true,
+                        "mode": "repulse"
+                    },
+                    "onclick": {
+                        "enable": true,
+                        "mode": "push"
+                    },
+                    "resize": true
+                }
+            },
+            "retina_detect": true
+        });
+    </script>
 </body>
 </html>
